Resolvendo os exercicios finais